--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     filter: blur();
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center top;
 }
 
 .hero {
