--- a/style.css
+++ b/style.css
@@ -61,8 +61,12 @@ body {
 }
 
 .mynavbar {
-  background-color: rgba(255, 255, 255, 0.5) !important;
+  background-color: rgba(255, 255, 255, 0.3) !important;
   backdrop-filter: blur(3px);
+}
+
+.mynavbar .offcanvas {
+  height: 100vh;
 }
 
 .mynavbar .navbar-brand,
@@ -83,6 +87,24 @@ body {
   margin-top: -6rem;
   padding-top: 15rem;
   padding-bottom: 5rem;
+}
+
+.home h2 {
+  color: var(--pink);
+  font-family: "Sacramento", cursive;
+  font-size: 5rem;
+  font-weight: bold;
+}
+
+.home h3 {
+  color: #444;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.home p {
+  font-size: 1.1rem;
+  color: #666;
 }
 
 /* Media Query */
