--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ body {
   padding-bottom: 5rem;
 }
 
-.home h2 {
+.home h2,
+.info h2 {
   color: var(--pink);
   font-family: "Sacramento", cursive;
   font-size: 5rem;
@@ -107,7 +108,84 @@ body {
   color: #666;
 }
 
+.home .couple {
+  margin-top: 100px;
+}
+
+.home .couple h3 {
+  font-family: "Sacramento", cursive;
+  font-size: 2.4rem;
+  color: var(--pink);
+}
+
+.home .couple img {
+  width: 100%;
+}
+
+.home .heart {
+  width: 50px;
+  height: 50px;
+  background-color: whitesmoke;
+  display: flex;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 5);
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%) translateY(65px);
+}
+
+.home .heart i {
+  margin: auto;
+  color: var(--pink);
+}
+
+.info {
+  background-color: var(--bg);
+  color: whitesmoke;
+  padding-top: 9rem;
+  padding-bottom: 7rem;
+}
+
+.info .alamat {
+  font-size: 1.1rem;
+}
+
+.info .description {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.info .card {
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  color: whitesmoke !important;
+  border: 1px solid #999;
+}
+
+.info .card-header {
+  border-bottom: 1px solid #999;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.info .card-body {
+  font-size: 1rem;
+}
+
+.info .card-footer {
+  border-top: 1px solid #999;
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+
 /* Media Query */
+
+/* Extra Large */
+@media (max-width: 1200px) {
+  .home .heart {
+    transform: translate(50%) translateY(45%);
+  }
+}
+
 /* Laptop */
 @media (max-width: 992px) {
   html {
@@ -120,6 +198,9 @@ body {
   .mynavbar .nav-link {
     font-size: 2rem;
     text-align: center;
+  }
+  .home .heart {
+    display: none;
   }
 }
 
