--- a/style.css
+++ b/style.css
@@ -230,4 +230,10 @@ body {
     padding: 40px;
     margin: 3px;
   }
+  .mynavbar {
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(3px);
+  }
 }
